option('hardening', type : 'boolean', value : true)

option('xtf', type : 'feature', value : 'disabled')
option('repl', type : 'feature', value : 'disabled')

option('plugin-syscalls', type : 'feature', value : 'enabled')
option('plugin-poolmon', type : 'feature', value : 'enabled')
option('plugin-filetracer', type : 'feature', value : 'enabled')
option('plugin-fileextractor', type : 'feature', value : 'enabled')
option('plugin-objmon', type : 'feature', value : 'enabled')
option('plugin-exmon', type : 'feature', value : 'enabled')
option('plugin-ssdtmon', type : 'feature', value : 'enabled')
option('plugin-cpuidmon', type : 'feature', value : 'enabled')
option('plugin-debugmon', type : 'feature', value : 'enabled')
option('plugin-socketmon', type : 'feature', value : 'enabled')
option('plugin-regmon', type : 'feature', value : 'enabled')
option('plugin-procmon', type : 'feature', value : 'enabled')
option('plugin-bsodmon', type : 'feature', value : 'enabled')
option('plugin-envmon', type : 'feature', value : 'enabled')
option('plugin-crashmon', type : 'feature', value : 'enabled')
option('plugin-clipboardmon', type : 'feature', value : 'enabled')
option('plugin-windowmon', type : 'feature', value : 'enabled')
option('plugin-crashmon', type : 'feature', value : 'enabled')
option('plugin-librarymon', type : 'feature', value : 'enabled')
option('plugin-dkommon', type : 'feature', value : 'enabled')
option('plugin-procdump', type : 'feature', value : 'enabled')
option('plugin-apimon', type : 'feature', value : 'enabled')
option('plugin-rpcmon', type : 'feature', value : 'enabled')
option('plugin-tlsmon', type : 'feature', value : 'enabled')
option('plugin-codemon', type : 'feature', value : 'enabled')
option('plugin-explitmon', type : 'feature', value : 'enabled')
option('plugin-rootkitmon', type : 'feature', value : 'enabled')
option('plugin-spraymon', type : 'feature', value : 'enabled')
option('plugin-hidsim', type : 'feature', value : 'enabled')

# Disabled by default plugins
option('plugin-libhooktest', type : 'feature', value : 'disabled')
option('plugin-ipt', type : 'feature', value : 'disabled')
option('plugin-procdump2', type : 'feature', value : 'enabled')

# Deprecated plugins
option('plugin-wmimon', type : 'feature', value : 'disabled')
option('plugin-filedelete', type : 'feature', value : 'disabled')
