option('hardening', type : 'boolean', value : true)

option('release', type : 'boolean', value : false)
option('xtf', type : 'boolean', value : 'false')
option('repl', type : 'boolean', value : 'false')

option('plugin-syscalls', type : 'boolean', value : true)
option('plugin-poolmon', type : 'boolean', value : true)
option('plugin-filetracer', type : 'boolean', value : true)
option('plugin-fileextractor', type : 'boolean', value : true)
option('plugin-objmon', type : 'boolean', value : true)
option('plugin-exmon', type : 'boolean', value : true)
option('plugin-ssdtmon', type : 'boolean', value : true)
option('plugin-cpuidmon', type : 'boolean', value : true)
option('plugin-debugmon', type : 'boolean', value : true)
option('plugin-socketmon', type : 'boolean', value : true)
option('plugin-regmon', type : 'boolean', value : true)
option('plugin-procmon', type : 'boolean', value : true)
option('plugin-bsodmon', type : 'boolean', value : true)
option('plugin-envmon', type : 'boolean', value : true)
option('plugin-crashmon', type : 'boolean', value : true)
option('plugin-clipboardmon', type : 'boolean', value : true)
option('plugin-windowmon', type : 'boolean', value : true)
option('plugin-librarymon', type : 'boolean', value : true)
option('plugin-dkommon', type : 'boolean', value : true)
option('plugin-procdump', type : 'boolean', value : true)
option('plugin-apimon', type : 'boolean', value : true)
option('plugin-rpcmon', type : 'boolean', value : true)
option('plugin-tlsmon', type : 'boolean', value : true)
option('plugin-codemon', type : 'boolean', value : true)
option('plugin-exploitmon', type : 'boolean', value : true)
option('plugin-rootkitmon', type : 'boolean', value : true)
option('plugin-spraymon', type : 'boolean', value : true)
option('plugin-hidsim', type : 'boolean', value : true)
option('plugin-callbackmon', type : 'boolean', value : true)
option('plugin-delaymon', type : 'boolean', value : true)
option('plugin-memdump', type : 'boolean', value : true)
option('plugin-hidevm', type : 'boolean', value : true)
option('plugin-ptracemon', type : 'boolean', value : true)
option('plugin-ebpfmon', type : 'boolean', value : true)
option('plugin-memaccessmon', type : 'boolean', value : true)
option('plugin-unixsocketmon', type : 'boolean', value : true)

# Disabled by default plugins
option('plugin-libhooktest', type : 'boolean', value : 'false')
option('plugin-ipt', type : 'boolean', value : 'false')
option('plugin-procdump2', type : 'boolean', value : true)

# Deprecated plugins
option('plugin-wmimon', type : 'boolean', value : 'false')
option('plugin-filedelete', type : 'boolean', value : 'false')
